--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+curl = "0.4.44"
+log = "0.4.20"
+reqwest = { version = "0.11.22", features = ["json", "cookies", "gzip"] }
+reqwest_cookie_store = "0.6.0"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
+simple_logger = "4.2.0"
+tl = "0.7.7"
+tokio = { version = "1.34.0", features = ["full"] }
 ureq = { version = "2.8.0", features = ["json"] }
